* Added ability to customize statistics for getDescriptionStatsBy
* transitionPlot: The color_bar_labels are now automatically extracted from the transition_flow input
* transitionPlot: Fixed bug so that the end viewport is the root
* transitionPlot: Fixed grid arrow bug
* transitionPlot: When using 3D matrices and two colors there should only be a colorbar when used with gradient arrows

Changes for 1.0
---------------
* htmlTable and some of the formatters have now moved to the 'htmlTable' package
* forestplot2 has now moved to the 'forestplot' package
* added the mergeDesc in order to merge lists from getDescriptionStatsBy for
* All functions default to html = TRUE instead of FALSE
* show_missing is now useNA in order to match the table() call handling of missing
* Fixed a few bugs

Changes for 0.6.8
-----------------
* Applied the DRY-documentation principle

Changes for 0.6.7
-----------------
* Added an interactive() check before using the viewer
* Minor adjustments to the htmlTable handling of no-blank spaces (&nbsp;)
* htmlTable now remember the ... argument and passes it on to the print.htmlTable() and cat()
* Added figCapNo and associated caption function for numbering figure captions
* Improved documentation

Changes for 0.6.6
-----------------
* Improved the htmlTable viewer handling (thanks Adam Smith)

Changes for 0.6.5
-----------------
* Changed the getDescriptionsBy example to work with the htmlTable() instead of
  the Hmisc::latex()
* Fixed getDescriptionsBy bug - the Total column failed when specified to be
  last - thanks Alexandre Vivot
* Added example for side-by side plotting for forestplot2
* As of 0.98.932 the knitr package isn't loaded, instead the metadata or device
  options indicates that it is knitting
* htmlTable bug: The function can now handle matrices without column names
* htmlTable bug: The function deletes and warns when n.rgroup/n.cgroup < 1

Changes for 0.6.4
-------------------