@@ -7,6 +7,7 @@ Changes for 1.0.1
 * transitionPlot: Fixed bug so that the end viewport is the root
 * transitionPlot: Fixed grid arrow bug
 * transitionPlot: When using 3D matrices and two colors there should only be a colorbar when used with gradient arrows
+* transitionPlot: If line width is smaller than the minimum width it is now set to 0
 
 Changes for 1.0
 ---------------
